--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "moment": "^2.9.0"
   },
   "dependencies": {
-    "mongoose": "~3.8.0",
+    "mongoose": "^4.9.7",
     "log4js": "^0.6.0",
     "lodash": "^3.9.1"
   },
